<resources>
    <string name="app_name">마스크를 부탁해</string>
    <string name="title_activity_maps">마스크를 부탁해</string>
    <string name="msg_refresh">새로고침</string>
    <string name="more_100">100개 이상</string>
    <string name="less_100">100개 미만</string>
    <string name="less_30">30개 미만</string>
    <string name="empty">없음</string>
    <string name="notice_1">1. 이번 주는 서비스의 안정적 운영을 지켜보기 위한 베타서비스 기간임을 양해 부탁드립니다.</string>
    <string name="notice_2">2. 서비스되는 재고 현황 정보는 데이터 처리 및 전송으로 인해 실제 현장 판매처의 현황과 5분~10분 정도의 차이가 있을 수 있습니다.</string>
    <string name="notice_3">3. 일부 약국에서는 번호표 배부 후 판매하는 약국도 있어 서비스되는 정보가 번호표 배부 현황을 반영하지 못할 수 있습니다.</string>
    <string name="notice_4">4. 심평원에서 마스크 판매정보 수집DB 안정화 등 작업으로 인해 매일 갱신되는 정보는 08:00~23:00까지 운영됩니다.</string>
    <string name="notice_5">5. 식약처 공적마스크 구매 안내 : http://blog.naver.com/kfdazzang/221839489769</string>
    <string name="notice_6">5. 데이터 출처 : 심평원‧정보화진흥원(공공데이터포털), 데이터 공개 문의 한국정보화진흥원 : maskdata@nia.or.kr</string>
    <string name="notice_7">6. 현재 코로나로 인해 일선에서 고생해주고 계신 모든 분들께 진심으로 감사드립니다. 이겨내요! 코로나!</string>
    <string name="title_notice">공지사항</string>
</resources>
